--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,11 @@
 }
 
 #rad-heading {
-  float:  left;
+  float: left;
 }
 
 #dire-heading {
-  float:  right;
+  float: right;
 }
 
 #team-headings {
@@ -33,8 +33,8 @@
 }
 
 .player-name {
-  font:  calibre;
-  font-size:  15px;
+  font: calibre;
+  font-size: 15px;
 }
 
 .item-preview-icon.p-0.m-0 {
@@ -42,25 +42,34 @@
 }
 
 .score-preview {
-  font:  "Times New Roman";
+  font: "Times New Roman";
 }
 
 .duration-preview {
-  font:  "calibre";
+  font: "calibre";
 }
 
-.mmr-spec {display:block;
-  float:right;}
+.mmr-spec {
+  display: block;
+  float: right;
+}
 
-.live-portrait 
-{
- background: rgb(1,43,26);
-background: linear-gradient(90deg, rgba(1,43,26,0.16288522244835435) 35%, rgba(38,0,3,0.13767513841474088) 65%); }
+.live-portrait {
+  background: rgb(1, 43, 26);
+  background: linear-gradient(
+    90deg,
+    rgba(1, 43, 26, 0.16288522244835435) 35%,
+    rgba(38, 0, 3, 0.13767513841474088) 65%
+  );
+}
 
 .background-main {
- 
- background: rgb(23,23,23);
-background: linear-gradient(90deg, rgba(23,23,23,0.9415967070421919) 0%, rgba(74,73,73,1) 100%); 
+  background: rgb(23, 23, 23);
+  background: linear-gradient(
+    90deg,
+    rgba(23, 23, 23, 0.9415967070421919) 0%,
+    rgba(74, 73, 73, 1) 100%
+  );
 }
 h5 {
   color: white;
@@ -71,30 +80,29 @@ h6 {
 }
 
 #root {
-    width: 100%;
-    height: 100vh;
-    min-height: 100%;
-    background: #212529;
-    display: block;
+  width: 100%;
+  height: 100vh;
+  min-height: 100%;
+  background: #212529;
+  display: block;
 }
 
 .player-name:hover {
   color: cyan;
 }
 
-
 .player-name-link {
-  textDecoration: none;
-  color:white;
+  textdecoration: none;
+  color: white;
 }
 
 .fill {
   min-height: 20vh;
-
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   font-family: sans-serif !important;
-}  
+}
